# VehicleDetectionPoC

app/: .gitignore  Makefile  README.md  cameras.toml  config.toml  pyproject.toml  qos.toml
app/app/: main.py  mqtt.py  redis.py  settings.py
app/app/drivers/: __init__.py  nef_auth.py  utilities.py
app/app/drivers/analytics/: __init__.py
app/app/drivers/application_profiles/: __init__.py
app/app/drivers/ccam/: __init__.py  backend.py
app/app/drivers/crash_inference/: __init__.py  backend.py  callbacks.py
app/app/drivers/crash_status/: __init__.py  backend.py
app/app/drivers/geofencing/: __init__.py  deps.py
app/app/drivers/location/: __init__.py
app/app/drivers/qod_provisioning/: __init__.py
app/app/drivers/qos_profiles/: __init__.py
app/app/drivers/sms/: __init__.py
app/app/drivers/ues/: __init__.py
app/app/interfaces/: __init__.py  analytics.py  application_profiles.py  ccam.py  crash_inference.py  crash_status.py  geofencing.py  location.py  qod_provisioning.py  qos_profiles.py  sms.py  ues.py
app/app/routers/: __init__.py
app/app/routers/endpoints/: __init__.py  cameras.py  config.py  crash_status.py
app/app/routers/websockets/: __init__.py  crash_status.py  location.py
app/app/schemas/: __init__.py  ccam.py  qos_profile.py
app/app/schemas/camara/: application_profiles.py  common.py  connectivity_insights_subscriptions.py  device.py  geofencing.py  location.py  nef.py  qodProvisioning.py  qos_profiles.py  quality_on_demand.py  reachability_status.py  roaming_status.py  smsotp.py  subscriptions.py
app/scripts/: nef_db_init.sh
(+122 files in other folders)
