[project]
name = "app"
version = "0.1.0"
description = "Vehicle Detection PoC backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis[hiredis]>=8.0.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["geopy", "geopy.distance"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["T20"]
